--- a/Proyecto2021/Views/Shared/_Layout.cshtml
+++ b/Proyecto2021/Views/Shared/_Layout.cshtml
@@ -1,12 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title -  Mi aplicación ASP.NET </title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&family=Merriweather:ital,wght@1,300&display=swap" rel="stylesheet">
+
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="~/Content/custom.css">
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -24,17 +30,21 @@
 
 
                     <li>@Html.ActionLink("Inicio", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Link", "", "")</li>
-                    <li>@Html.ActionLink("Link", "", "")</li>   
-                    <li>@Html.ActionLink("Producto", "Index", "Producto")</li>   
-                    <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>    
-                    <li>@Html.ActionLink("Compra", "Index", "Compra")</li>    
-                    <li>@Html.ActionLink("Proveedor", "Index", "Proveedor")</li>    
+
+
+
                     <li>@Html.ActionLink("Iniciar Sesion", "Login", "Usuario")</li>
+
+
                     @if (User.Identity.IsAuthenticated)
                     {
-                        
+                        <li>@Html.ActionLink("Usuario", "Index", "Usuario")</li>
+                        <li>@Html.ActionLink("Producto", "Index", "Producto")</li>
+                        <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
+                        <li>@Html.ActionLink("Compra", "Index", "Compra")</li>
+                        <li>@Html.ActionLink("Proveedor", "Index", "Proveedor")</li>
                         <li>@Html.ActionLink("Salir", "CloseSession", "Usuario")</li>
+                        
                     }
                 </ul>
             </div>
